Closed
Bug 1670214
Opened 5 years ago
Closed 5 years ago
[Fission] Crash in [@ mozilla::dom::CanonicalBrowsingContext::NotifyOnHistoryReload]
Categories
(Core :: DOM: Navigation, defect)
Core
DOM: Navigation
Tracking
()
RESOLVED
FIXED
83 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | unaffected |
| firefox83 | --- | fixed |
People
(Reporter: aryx, Assigned: smaug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
2 crashes in the last days, first one with 83.0a1 20201007155036
Maybe Fission related. (DOMFissionEnabled=1)
Crash report: https://crash-stats.mozilla.org/report/index/f5056e9f-3dc0-43c8-8cc4-7f4980201008
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll mozilla::dom::CanonicalBrowsingContext::NotifyOnHistoryReload docshell/base/CanonicalBrowsingContext.cpp:531
1 xul.dll nsDocShell::Reload docshell/base/nsDocShell.cpp:4071
2 xul.dll XPTC__InvokebyIndex
3 @0x7ffcffffffff
4 xul.dll trunc
5 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1142
6 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:947
7 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:601
8 xul.dll Interpret js/src/vm/Interpreter.cpp:3338
9 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:638
| Reporter | ||
Updated•5 years ago
|
Summary: Crash in [@ mozilla::dom::CanonicalBrowsingContext::NotifyOnHistoryReload] → [Fission] Crash in [@ mozilla::dom::CanonicalBrowsingContext::NotifyOnHistoryReload]
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → bugs
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/472fe21770b2
[Fission] Crash in [@ mozilla::dom::CanonicalBrowsingContext::NotifyOnHistoryReload], r=jesup
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•