Bug 1670214 - [Fission] Crash in [@ mozilla::dom::CanonicalBrowsingContext::NotifyOnHistoryReload], r=jesup

Trying to keep the old behavior where reload succeeds without shistory
https://hg.mozilla.org/mozilla-central/file/a42aa95147941ca7983eaf4846b644e207de24f8/docshell/base/nsDocShell.cpp#l4091

Differential Revision: https://phabricator.services.mozilla.com/D93331